# tokenresearch

./: .gitignore  Cargo.toml  README.md  config.toml.example  price_config.toml.example
coingeko/: README.md  coingecko_top300_daily.py  main.py  pyproject.toml
coingeko/metrics/: __init__.py  cli.py  config.py  dcc.py  io.py  leadlag.py  market_model.py  pairwise.py  panel.py  risk.py  structure.py  utils.py  web_export.py
coingeko/webapp/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
coingeko/webapp/src/: main.tsx
coingeko/webapp/src/app/: AppShell.tsx  router.tsx
coingeko/webapp/src/components/: DataTable.tsx  EChart.tsx  MetricCard.tsx  Panel.tsx  StatusBlock.tsx
coingeko/webapp/src/data/: api.ts  hooks.ts  schemas.ts
coingeko/webapp/src/lib/: analytics.ts  chartOptions.ts  format.ts
coingeko/webapp/src/pages/: CoinPage.tsx  OverviewPage.tsx  PairPage.tsx  SourcesPage.tsx  StructurePage.tsx
coingeko/webapp/src/styles/: global.css
docs/: architecture.md  coingecko-metrics-plan.md  price-collector.md  runtime-flow.md  storage-query.md
src/: book.rs  diagnostics.rs  lib.rs  main.rs  model.rs  price_model.rs  price_query.rs  price_runtime.rs  price_storage.rs  query.rs  runtime.rs  storage.rs  sync.rs  traits.rs
src/adapters/: binance.rs  (+3 more)
tests/: adapters_parsing.rs  book_state.rs  cli_query.rs  model_roundtrip.rs  online_smoke.rs  price_adapters.rs  price_backfill.rs  price_cli.rs  price_online_smoke.rs  price_query.rs  price_runtime.rs  price_storage.rs  runtime_integration.rs  storage_query.rs  sync_logic.rs
(+32 files in other folders)
